--- a/roles/docker-compose/templates/murmur/murmur.ini
+++ b/roles/docker-compose/templates/murmur/murmur.ini
@@ -157,8 +157,8 @@ registerUrl=https://{{ base_url }}/
 
 # If you have a proper SSL certificate, you can provide the filenames here.
 # Otherwise, Murmur will create it's own certificate automatically.
-#sslCert=
-#sslKey=
+sslCert=/etc/ssl/certs/{{ base_url }}.crt
+sslKey=/etc/ssl/private/{{ base_url }}.key
 
 # The sslCiphers option chooses the cipher suites to make available for use
 # in SSL/TLS. This option is server-wide, and cannot be set on a
