fix synapse media-store permissions

--- a/roles/docker-compose/tasks/compose.yml
+++ b/roles/docker-compose/tasks/compose.yml
@@ -1,6 +1,7 @@
 ---
 - name: do compose magic
   docker_compose:
+    pull: yes
     project_name: root
     definition:
       version:                        "3"
