refactor position of declaration firewall-services

--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -2,8 +2,24 @@
 - hosts: all
   roles:
   - base
-  - firewalld
   tags: base
+
+- hosts: web
+  roles:
+  - firewalld
+  vars:
+    firewall_services:
+    - http
+    - https
+    firewall_ports:
+    - 8080/tcp
+    - 8181/tcp
+    - 8008/tcp
+    - 8090/tcp
+    - 8448/tcp
+    - 64738/udp
+    - 64738/tcp
+  tags: firewall
 
 - hosts: web
   roles:
