--- a/roles/firewalld/tasks/main.yml
+++ b/roles/firewalld/tasks/main.yml
@@ -16,22 +16,14 @@
     permanent: yes
     state: enabled
     immediate: yes
-  with_items:
-    - http
-    - https
-    - murmur
+  with_items: "{{ firewall_services }}"
 
 - firewalld:
     port: "{{ item }}"
     permanent: yes
     state: enabled
     immediate: yes
-  with_items:
-    - 8080/tcp 
-    - 8181/tcp
-    - 8008/tcp
-    - 8090/tcp
-    - 8448/tcp
+  with_items: "{{ firewall_ports }}"
 
 - name: Enable firewalld on system reboot
   service:
