--- a/roles/docker-compose/templates/murmur/murmur.ini
+++ b/roles/docker-compose/templates/murmur/murmur.ini
@@ -57,7 +57,7 @@ ice="tcp -h 127.0.0.1 -p 6502"
 # access will be denied.
 
 #icesecretread=
-icesecretwrite=
+icesecretwrite=secret
 
 # How many login attempts do we tolerate from one IP
 # inside a given timeframe before we ban the connection?
