change access_token name and only grant read access

--- a/roles/docker-compose/templates/murmur/murmur.ini
+++ b/roles/docker-compose/templates/murmur/murmur.ini
@@ -56,8 +56,8 @@ ice="tcp -h 127.0.0.1 -p 6502"
 # Note that if this is uncommented and with empty content,
 # access will be denied.
 
-#icesecretread=
-icesecretwrite=secret
+icesecretread=secret
+#icesecretwrite=
 
 # How many login attempts do we tolerate from one IP
 # inside a given timeframe before we ban the connection?
