update synapse to v1.11.1 this also resolves the but, that you can't add admin-users via the api and accept some invites from remote servers.

--- a/roles/docker-compose/tasks/compose.yml
+++ b/roles/docker-compose/tasks/compose.yml
@@ -34,7 +34,7 @@
           container_name:             synapse-postgres
 
         synapse:
-          image:                      matrixdotorg/synapse:latest
+          image:                      matrixdotorg/synapse:v1.11.1
           restart:                    unless-stopped
           depends_on:
             - synapse-postgres
