--- a/roles/docker-compose/templates/synapse/homeserver.yaml
+++ b/roles/docker-compose/templates/synapse/homeserver.yaml
@@ -47,12 +47,12 @@ public_baseurl: https://matrix.{{ base_url }}/
 # If set to 'false', requires authentication to access the server's public rooms
 # directory through the client API. Defaults to 'true'.
 #
-#allow_public_rooms_without_auth: false
+allow_public_rooms_without_auth: true
 
 # If set to 'false', forbids any other homeserver to fetch the server's public
 # rooms directory via federation. Defaults to 'true'.
 #
-#allow_public_rooms_over_federation: false
+allow_public_rooms_over_federation: true
 
 # The default room version for newly created rooms.
 #
