--- a/roles/docker-compose/templates/riot/config.json
+++ b/roles/docker-compose/templates/riot/config.json
@@ -20,13 +20,13 @@
         "feature_custom_status": "enable",
         "feature_custom_tags": "enable",
         "feature_state_counters": "enable",
-    	"feature_mjolnir": "labs",
-    	"feature_dm_verification": "labs",
-    	"feature_cross_signing": "labs",
-    	"feature_event_indexing": "labs",
-    	"feature_bridge_state": "labs",
-    	"feature_presence_in_room_list": "enable",
-    	"feature_invite_only_padlocks": "enable"
+        "feature_presence_in_room_list": "enable",
+        "feature_invite_only_padlocks": "enable",
+        "feature_mjolnir": "labs",
+        "feature_dm_verification": "labs",
+        "feature_cross_signing": "labs",
+        "feature_event_indexing": "labs",
+        "feature_bridge_state": "labs"
     },
     "default_federate": true,
     "default_theme": "dark",
