--- a/roles/docker-compose/templates/matrix-appservice-irc/config.yaml
+++ b/roles/docker-compose/templates/matrix-appservice-irc/config.yaml
@@ -252,6 +252,8 @@ ircService:
         # The matrix room must already exist. Your matrix client should expose
         # the room ID in a "settings" page for the room.
         "#chaos-jetzt": ["!jzpFzjAsmwAABpGore:{{ base_url }}"]
+        "#chaos-jetzt_random": ["!UPtrDrUkWTdXogEXBz:{{ base_url }}"]
+        "#chaos-jetzt_administration": ["!hyuCMEtcsPzkxnOmYB:{{ base_url }}"]
         "#chaos-jetzt_alte-leute-lounge": ["!bzDCiULXRPjUwoMapO:{{ base_url }}"]
         "#voc-lounge": ["!hXGwzNSSDRfpjpQocD:{{ base_url }}"]
         "#regio": ["!foNvGrpipDkRyUTgxu:{{ base_url }}"]
