mumble: remove from public server list

--- a/roles/docker-compose/templates/murmur/murmur.ini
+++ b/roles/docker-compose/templates/murmur/murmur.ini
@@ -143,9 +143,9 @@ users=100
 # addresses.
 # Only uncomment the 'registerName' parameter if you wish to give your "Root" channel a custom name.
 #
-registerName={{ base_url }}
-registerPassword={{ murmur_register_password }}
-registerUrl=https://{{ base_url }}/
+#registerName={{ base_url }}
+#registerPassword={{ murmur_register_password }}
+#registerUrl=https://{{ base_url }}/
 #registerHostname=
 
 # If this option is enabled, the server will announce its presence via the
