replace cutsom base and docker-role with submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "roles/jnv.unattended-upgrades"]
 	path = roles/jnv.unattended-upgrades
 	url = https://github.com/jnv/ansible-role-unattended-upgrades
+[submodule "roles/docker"]
+	path = roles/docker
+	url = https://git.labcode.dev/ansible_roles/docker
+[submodule "roles/base"]
+	path = roles/base
+	url = https://github.com/n0emis/ansible-role-base
