--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -14,6 +14,7 @@ password_users:
 
 ansible_python_interpreter: "/usr/bin/python3"
 
+motd_path: ../../../templates/motd_knot
 
 synapse_db_password: "{{ lookup('passwordstore', 'infra/matrix/db create=true') }}"
 synapse_registration_secret: "{{ lookup('passwordstore', 'infra/matrix/registration') }}"
