update synapse and base role

--- a/roles/docker-compose/tasks/files.yml
+++ b/roles/docker-compose/tasks/files.yml
@@ -79,7 +79,7 @@
 
 - name: clone website repo
   git:
-    repo: 'https://git.cccgoe.de/Asterix/jetztstatic'
+    repo: 'https://github.com/chaos-jetzt/jetztstatic/'
     dest: /root/nginx/html
     clone: yes
     update: yes
