--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,5 +7,8 @@ fact_caching_connection = ~/.ansible-cache
 fact_caching_timeout = 86400
 nocows = 1
 
+[privilege_escalation]
+become=True
+
 [ssh_connection]
 pipelining=True
