--- a/roles/docker-compose/tasks/container.yml
+++ b/roles/docker-compose/tasks/container.yml
@@ -143,7 +143,7 @@
 #    state: started
 
 # Wiki
-- name: Create/Start maubot docker container
+- name: stop dokuwiki docker container
   docker_container:
     name: "dokuwiki"
     image: "bitnami/dokuwiki:0"
@@ -165,7 +165,7 @@
       traefik.http.routers.dokuwiki_https.entryPoints: "https"
       traefik.http.routers.dokuwiki_https.tls.certresolver: "le_http"
       traefik.http.services.dokuwiki-app.loadbalancer.server.port: "80"
-    state: started
+    state: stopped
 
 # Mumble
 - name: Create/Start mumble-web docker container
